[project]
authors = [
  {name = "Jonathan Dobson", email = "author@example.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "Language Model Tools for Apple Silicon"
name = "applm"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.1"

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
