[project]
authors = [
  {name = "Jonathan Dobson", email = "author@example.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
]
description = "Language Model Tools for Apple Silicon"
name = "applm"
readme = "README.md"
requires-python = ">=3.8"
version = "0.0.40"

[project.urls]
Homepage = "https://github.com/Jonathan-Dobson/applm"
Issues = "https://github.com/Jonathan-Dobson/applm/issues"

[packages]
include = ["applm"]
